--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ rocket_cors = { version = "0.5.1", default-features = false }
 serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.44"
 rust-crypto = "0.2.36"
-chrono = { version = "0.4.10", features = ["serde"] }
-diesel = { version = "1.4.5" , features = ["postgres", "chrono"] }
+chrono = { version = "0.4.17", features = ["serde"] }
+diesel = { version = "1.4.5" , features = ["postgres", "chrono", "numeric"] }
 validator = "0.10.0"
 validator_derive = "0.10.0"
 dotenv = "0.15.0"
