--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: kilpkonn
           password: ${{ secrets.GH_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v2
