--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,4 +38,4 @@ jobs:
           platforms: linux/arm64
           push: true
           tags: |
-            developest/gtm-api:latest
+            ghcr.io/${{ github.repository_owner }}/gtm-api:latest
