--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: kilpkonn
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GH_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
