--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ jobs:
   deploy:
     name: Deploy
     runs-on: self-hosted
+    env:
+      CONTAINER_NAME: 'gtm-api'
     steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
@@ -21,4 +23,11 @@ jobs:
           sudo docker pull ghcr.io/developest/gtm-api:latest
       - name: Stop old container
         run: |
-          sudo docker image ls
+          sudo docker stop ${{ env.CONTAINER_NAME }}
+      - name: Run new container
+        run: |
+          sudo docker run \
+            --name ${{ env.CONTAINER_NAME }} \
+            --rm \
+            -p 8000:8000
+            -d ghcr.io/developest/gtm-api:latest
