Squashed commit of the following:
commit 44bb50f67859a4fc26a5b631a3cb050a501c3126
Author: tavo <tavo.annus@gmail.com>
Date:   Thu Jan 7 14:24:17 2021 +0200

    Test

commit 8f08e975f80f84ed8f2067ee81d4bd42cb7bde03
Author: tavo <tavo.annus@gmail.com>
Date:   Thu Jan 7 13:21:50 2021 +0200

    Test run

commit 64ab1287ef21b233d7602f4f22f341e3de79da8e
Author: tavo <tavo.annus@gmail.com>
Date:   Thu Jan 7 13:01:23 2021 +0200

    Test run

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy
 on:
   workflow_run:
     workflows: ["Build"]
-    # branches: ["main"]
+    branches: ["main"]
     types:
       - completed
 jobs:
@@ -23,11 +23,25 @@ jobs:
           sudo docker pull ghcr.io/developest/gtm-api:latest
       - name: Stop old container
         run: |
-          sudo docker stop ${{ env.CONTAINER_NAME }}
+          sudo docker stop ${{ env.CONTAINER_NAME }} || true
       - name: Run new container
         run: |
           sudo docker run \
             --name ${{ env.CONTAINER_NAME }} \
-            --rm \
-            -p 8000:8000
+            --network="api-internal-network" \
+            -e DATABASE_URL=$DATABASE_URL \
+            -e SECRET_KEY=$SECRET_KEY \
+            -v /etc/gtm/gtm-api:/gtm/gtm-api \
+            -p 8000:8000 \
             -d ghcr.io/developest/gtm-api:latest
+  clean-up:
+    name: Clean up
+    needs: ['Deploy']
+    runs-on: self-hosted
+    steps:
+      - name: Docker prune
+        run: |
+          sudo docker system prune -af
+      - name: Show running containers
+        run: |
+          sudo docker ps
