--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ diesel = { version = "1.4.5" , features = ["postgres", "chrono", "numeric"] }
 validator = "0.10.0"
 validator_derive = "0.10.0"
 dotenv = "0.15.0"
+chrono-tz = "0.5.3"
 
 
 [dependencies.rocket_contrib]
