--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1.0.44"
 rust-crypto = "0.2.36"
 chrono = { version = "0.4.17", features = ["serde"] }
 diesel = { version = "1.4.5" , features = ["postgres", "chrono", "numeric"] }
+diesel_migrations = "1.4.0"
 validator = "0.10.0"
 validator_derive = "0.10.0"
 dotenv = "0.15.0"
