--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gtm-api"
 version = "0.1.0"
-authors = ["mjurge"]
+authors = ["mjurge", "taannu"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -19,6 +19,7 @@ validator = "0.10.0"
 validator_derive = "0.10.0"
 dotenv = "0.15.0"
 chrono-tz = "0.5.3"
+jsonwebtoken = "7.2.0"
 
 
 [dependencies.rocket_contrib]
