--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ validator_derive = "0.10.0"
 dotenv = "0.15.0"
 chrono-tz = "0.5.3"
 jsonwebtoken = "7.2.0"
+lazy_static = "1.4.0"
 
 
 [dependencies.rocket_contrib]
