--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ dotenv = "0.15.0"
 chrono-tz = "0.5.3"
 jsonwebtoken = "7.2.0"
 lazy_static = "1.4.0"
+log = "0.4.14"
+regex = "1.4.3"
 
 
 [dependencies.rocket_contrib]
