--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ lazy_static = "1.4.0"
 log = "0.4.14"
 regex = "1.4.3"
 rocket_oauth2 = "0.4.1"
+reqwest = { version = "0.10.9", features = ["json"] }
+tokio = { version = "0.2", features = ["full"] }
 
 
 [dependencies.rocket_contrib]
