--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ async-trait = "0.1.47"
 rand = "0.8.3"
 futures = "0.3.13"
 rocket_okapi = "0.6.0-alpha-1"
-schemars = "0.8.3"
+schemars = { version = "0.8.3", features = ["chrono"]}
 okapi = { version = "0.5.0-alpha-1", features = ["derive_json_schema"] }
 
 
