--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ futures = "0.3.13"
 rocket_okapi = "0.6.0-alpha-1"
 schemars = { version = "0.8.3", features = ["chrono"]}
 okapi = { version = "0.5.0-alpha-1", features = ["derive_json_schema"] }
+itertools = "0.10.0"
 
 
 [dependencies.rocket_contrib]
