--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy
 on:
   workflow_run:
-    workflows: ["Build"]
+    workflows: ["Build", "Test"]
     branches: ["master"]
     types:
       - completed
