Fix tests failing on github actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
           docker-compose up -d
           sleep 3
           diesel migration run
+          cargo test || true  # Allow failure as there seems to be bug with first migration
       - name: Run cargo test
         uses: actions-rs/cargo@v1
         with:
